0.1-alpha3/_sources/gene/AGAP003260.rst.txt
:orphan:



AGAP003260
==========

Location: **2R:34,504,196-34,506,056**

Name: **Gr21**

Description: **Gustatory receptor 21**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP003260>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:34504196-34506056#genomebrowser>`_







Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/BFS/2/6/index`
      - H12
      - Burkina Faso *An. gambiae*
      - 2R:34,420,000-34,460,000
      - 114
      - 92.9%
      - nan
    * - :doc:`../signal/XPEHH/BFS.UGS/2/5/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2R:34,420,000-34,480,000
      - 95
      - 96.7%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP003260';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


